@@ -2,7 +2,7 @@
  * #%L
  * ImageJ2 software for multidimensional image processing and analysis.
  * %%
- * Copyright (C) 2014 - 2022 ImageJ2 developers.
+ * Copyright (C) 2014 - 2023 ImageJ2 developers.
  * %%
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are met:
@@ -28,6 +28,7 @@
  */
 package net.imagej.ops2.create;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.function.BiFunction;
 import java.util.function.Function;
@@ -40,11 +41,14 @@ import net.imglib2.IterableInterval;
 import net.imglib2.RandomAccessibleInterval;
 import net.imglib2.img.Img;
 import net.imglib2.img.ImgFactory;
+import net.imglib2.img.array.ArrayImg;
 import net.imglib2.img.array.ArrayImgFactory;
+import net.imglib2.img.basictypeaccess.array.ArrayDataAccess;
 import net.imglib2.roi.labeling.ImgLabeling;
 import net.imglib2.roi.labeling.LabelingMapping;
 import net.imglib2.type.BooleanType;
 import net.imglib2.type.NativeType;
+import net.imglib2.type.NativeTypeFactory;
 import net.imglib2.type.Type;
 import net.imglib2.type.logic.BitType;
 import net.imglib2.type.numeric.ComplexType;
@@ -68,7 +72,7 @@ import org.joml.Vector3f;
 import org.scijava.function.Functions;
 import org.scijava.function.Producer;
 
-public class Creators<N extends NativeType<N>, L, I extends IntegerType<I>, T extends Type<T>, C extends ComplexType<C>, W extends ComplexType<W> & NativeType<W>, B extends BooleanType<B>> {
+public class Creators<N extends NativeType<N>, L, I extends IntegerType<I>, T extends Type<T>, C extends ComplexType<C>, W extends ComplexType<W> & NativeType<W>, B extends BooleanType<B>, A extends ArrayDataAccess<A>> {
 
 	/* ImgFactories */
 
@@ -200,13 +204,16 @@ public class Creators<N extends NativeType<N>, L, I extends IntegerType<I>, T ex
 	public final Function<RandomAccessibleInterval<T>, Img<T>> imgFromRAI = (rai) -> imgFromDimsAndType.apply(rai,
 			Util.getTypeFromInterval(rai));
 
-	/* IntegerType */
-
 	/**
-	 * @output integerType
-	 * @implNote op names='create, create.integerType', priority='0.'
+	 * @input arrayImg
+	 * @output img
+	 * @implNote op names='create, create.img', priority='1000.'
 	 */
-	public final Producer<LongType> integerTypeSource = () -> new LongType();
+	@SuppressWarnings("unchecked")
+	public final Function<ArrayImg<N, A>, ArrayImg<N, A>> arrayImgFromArrayImg //
+			= input -> (ArrayImg<N, A>) input //
+			.factory() //
+			.create(input.dimensionsAsLongArray());
 
 	/* Type */
 
@@ -216,12 +223,6 @@ public class Creators<N extends NativeType<N>, L, I extends IntegerType<I>, T ex
 	 * @implNote op names='create, create.type'
 	 */
 	public final Function<T, T> typeFromSampleType = (sample) -> sample.createVariable();
-
-	/**
-	 * @output booleanType
-	 * @implNote op names='create, create.type', priority='-100.'
-	 */
-	public final Producer<BitType> booleanTypeSource = () -> new BitType();
 
 	/* ImgLabeling */
 
@@ -575,8 +576,8 @@ public class Creators<N extends NativeType<N>, L, I extends IntegerType<I>, T ex
 	 * @output labelingMapping
 	 * @implNote op names='create, create.labelingMapping'
 	 */
-	public final Producer<LabelingMapping<L>> labelingMappingSource = () -> new LabelingMapping<>(
-			integerTypeSource.create());
+	public final Producer<LabelingMapping<L>> labelingMappingSource = //
+		() -> new LabelingMapping<>(new LongType());
 
 	public final Function<Long, IntegerType> integerTypeFromLong = (maxValue) -> {
 		if (maxValue <= 0L)
@@ -615,29 +616,11 @@ public class Creators<N extends NativeType<N>, L, I extends IntegerType<I>, T ex
 	 */
 	public final Function<Class<L>, L> object = (clazz) -> {
 		try {
-			return clazz.newInstance();
-		} catch (final InstantiationException exc) {
-			throw new IllegalArgumentException(exc);
-		} catch (final IllegalAccessException exc) {
-			throw new IllegalArgumentException(exc);
+			return clazz.getDeclaredConstructor().newInstance();
+		} catch (final InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
+			throw new IllegalArgumentException(e);
 		}
 	};
-
-	/* NativeType */
-
-	/**
-	 * @output nativeType
-	 * @implNote op names='create, create.nativeType', priority='100.'
-	 */
-	public final Producer<DoubleType> defaultNativeType = () -> new DoubleType();
-
-	// TODO is this a safe cast?
-	/**
-	 * @input type
-	 * @output nativeType
-	 * @implNote op names='create, create.nativeType'
-	 */
-	public final Function<Class<N>, N> nativeTypeFromClass = (clazz) -> (N) object.apply((Class<L>) clazz);
 
 	/**
 	 * @output vector3d
